# dimensional_analysis_library

./: .gitignore  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  MANUAL.md  PROJECT_STRUCTURE.md  README.md  ROADMAP.md  SECURITY.md
.github/workflows/: release.yml
include/: dimensions.h  ecs.h  units.h
src/: main.cpp
tests/: unit_tests.cpp
